# knowledge-engine

./: .gitignore  README.md
.github/workflows/: ci.yml
deliverables/v1.0-template/engine/: README.md  pyproject.toml
deliverables/v1.0-template/engine/routing_local/: README.md  ollama_provider.py
deliverables/v1.0-template/engine/sandbox_adapter/: README.md
deliverables/v1.0-template/engine/src/knowledge_engine/: __init__.py  app.py  cli.py  config.py  indexer.py  mcp_server.py  registry.py  watcher.py
deliverables/v1.0-template/engine/src/knowledge_engine/agent_board/: __init__.py  cli.py  keys.py  providers.py  schemas.py  scopes.py  service.py  store.py  sweeper.py
deliverables/v1.0-template/engine/src/knowledge_engine/api/: board_routes.py  generate_routes.py  health_routes.py  registry_routes.py  search_routes.py
deliverables/v1.0-template/engine/tests/: test_agent_board.py  test_host_allowlist.py  test_smoke.py
deliverables/v1.0-template/engine/tests/project_docs/: conftest.py  test_config.py  test_db.py  test_embedding_tools.py  test_embeddings_index.py  test_embeddings_providers.py  test_fingerprints.py  test_git_context.py  test_git_tools.py  test_ingest.py  test_log_tools.py  test_logs.py  test_mcp_seam.py  test_paths.py  test_pointer_rewrite.py  test_pointer_tools.py  test_pointers.py  test_query_tools.py  test_registry.py  test_registry_tools.py  test_sanitize.py  test_scanner_detectors.py  test_scanner_discovery.py  test_scanner_ingest.py  test_scanner_report.py  test_scanner_tools.py  test_schema_models_hashing.py  test_search.py
(+111 files in other folders)
